--- a/v4posme_maui/Views/Invoices/03DataInvoiceCreditPage.xaml
+++ b/v4posme_maui/Views/Invoices/03DataInvoiceCreditPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -8,22 +8,27 @@
              xmlns:dx="clr-namespace:DevExpress.Maui.Core;assembly=DevExpress.Maui.Core"
              xmlns:controls="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls"
              Title="{Binding Title}"
-             x:Class="v4posme_maui.Views.Invoices.DataInvoicesPage">
+             x:Class="v4posme_maui.Views.Invoices.DataInvoiceCreditPage">
     <ContentPage.BindingContext>
-        <invoices:DataInvoicesViewModel />
+        <invoices:DataInvoiceCreditViewModel />
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <controls:ShimmerView
             Style="{StaticResource ShimmerEffect}"
             IsLoading="{Binding IsBusy}">
+            
+            
             <controls:ShimmerView.Content>
                 <ScrollView>
                     <StackLayout>
+                        
                         <dx:DXStackLayout Orientation="Vertical">
                             <dx:DXBorder HeightRequest="1" BorderThickness="1"
                                          BackgroundColor="{AppThemeBinding Light={StaticResource SeparatorColor}, Dark={StaticResource SeparatorColorDark}}" />
                             <dx:DXImage Source="invoice_green" WidthRequest="150" HeightRequest="150" />
                         </dx:DXStackLayout>
+                        
+                        
                         <dx:DXBorder
                             Margin="15"
                             BackgroundColor="{AppThemeBinding Light={StaticResource CardColor}, Dark={StaticResource CardColorDark}}"
@@ -37,57 +42,59 @@
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
+
+
+                                <dxe:ComboBoxEdit
+                                     Grid.Row="4"
+                                     SelectedItem="{Binding SelectedPeriodPay}"
+                                     HasError="{Binding ErrorPeriodPay}"
+                                     StartIcon="identificacion"
+                                     IsLabelFloating="True"
+                                     LabelText="Frecuencia de pago"
+                                     ItemsSource="{Binding PeriodPay}" />
+
+
                                 <dxe:TextEdit
-                                    Grid.Row="0"
-                                    x:Name="TxtCustomer"
-                                    IsReadOnly="True"
-                                    IconColor="{StaticResource Primary}"
-                                    StartIcon="person"
-                                    Text="{Binding Item.NombreCompleto}"
-                                    LabelText="Nombre completo" />
+                                     Grid.Row="2"
+                                     IconColor="{StaticResource Primary}"
+                                     HasError="{Binding ErrorFiexdExpense}"
+                                     x:Name="txtFixedExpense"
+                                     IsErrorIconVisible="{Binding ErrorFiexdExpense}"
+                                     StartIcon="identificacion"
+                                     Keyboard="Numeric"
+                                     Text="{Binding FixedExpenses}"
+                                     LabelText="Interes" />
+
                                 <dxe:TextEdit
                                     Grid.Row="1"
                                     IconColor="{StaticResource Primary}"
-                                    HasError="{Binding ErrorComentarios}"
-                                    x:Name="Txtcomentarios"
-                                    IsErrorIconVisible="{Binding ErrorComentarios}"
+                                    HasError="{Binding ErrorPlazo}"
+                                    x:Name="txtPlazo"
+                                    IsErrorIconVisible="{Binding ErrorPlazo}"
                                     StartIcon="identificacion"
-                                    Text="{Binding Comentarios}"
-                                    LabelText="Comentarios" />
-                                <dxe:TextEdit
-                                    Grid.Row="2"
-                                    IconColor="{StaticResource Primary}"
-                                    HasError="{Binding ErrorReferencia}"
-                                    x:Name="TxtReferencia"
-                                    IsErrorIconVisible="{Binding ErrorReferencia}"
-                                    StartIcon="identificacion"
-                                    Text="{Binding Referencias}"
-                                    LabelText="Referencia" />
-                                <dxe:ComboBoxEdit
-                                    Grid.Row="3"
-                                    SelectedItem="{Binding SelectedCurrency}"
-                                    HasError="{Binding ErrorCurrency}"
-                                    IsLabelFloating="True"
-                                    StartIcon="price"
-                                    LabelText="Moneda"
-                                    ItemsSource="{Binding Currencies}" />
-                                <dxe:ComboBoxEdit
-                                    Grid.Row="4"
-                                    SelectedItem="{Binding SelectedTipoDocumento}"
-                                    HasError="{Binding ErrorTipoDocumento}"
-                                    StartIcon="identificacion"
-                                    IsLabelFloating="True"
-                                    LabelText="Tipo de documento"
-                                    ItemsSource="{Binding TipoDocumentos}" />
+                                    Keyboard="Numeric"
+                                    Text="{Binding Plazo}"
+                                    LabelText="Plazo" />
+
+                                <dxe:DateEdit
+                                  Grid.Row="0"
+                                  x:Name="txtNextVisit"                                   
+                                  IconColor="{StaticResource Primary}"
+                                  StartIcon="calendar_today"
+                                  Date="{Binding NextVisit}"
+                                  LabelText="Primer pago" />
+
                                 <dx:DXButton
                                     Grid.Row="5"
-                                    Content="Más opciones"
-                                    Command="{Binding SeleccionarInvoiceCreditCommand}" />
+                                    Content="Seleccionar Productos"
+                                    Command="{Binding SeleccionarProductosCommand}" />
                             </Grid>
                         </dx:DXBorder>
                     </StackLayout>
                 </ScrollView>
             </controls:ShimmerView.Content>
+            
+            
             <controls:ShimmerView.LoadingView>
                 <ActivityIndicator IsRunning="{Binding IsBusy}"
                                    HeightRequest="50"
