--- a/v4posme_maui/Views/PosMeZMasterLoginPage.xaml
+++ b/v4posme_maui/Views/PosMeZMasterLoginPage.xaml
@@ -109,5 +109,10 @@
             LabelText="Compañia"
             Margin="0,10,0,0" />
 
+        <Label HorizontalTextAlignment="Center" 
+               FontSize="14"
+               FontAttributes="Bold"
+               Text="{Binding VersionApp}"
+               Margin="0, 10,0,0"/>
     </VerticalStackLayout>
 </ContentPage>
